--- a/index.html
+++ b/index.html
@@ -94,8 +94,9 @@
                         <h1 class="text-huge-title">
                             Lesedi Skosana, <br>
                             I am a Python Developer, <br>
-                            MongoDB Database Administrator <br> 
-                            & Data Analyst <br>
+                            Database Administrator, <br> 
+                            Data Analyst <br>
+                            & Security Engineer <br>
                             based in South Africa.
                         </h1>
                     </div>
@@ -135,7 +136,7 @@
                                 About
                             </h2>
                             <p class="attention-getter" data-animate-el>
-                                Hi, I’m Lesedi Skosana! I’m a Python Developer, MongoDB Database Administrator, and Data Analyst based in South Africa. 
+                                Hi, I’m Lesedi Skosana! I’m a Python Developer, Database Administrator, Data Analyst and Security Engineer based in South Africa. 
                                 I thrive on building complex systems, finding solutions where others see challenges. 
                                 My passion lies in transforming intricate data into clear, actionable insights and crafting efficient, data-driven applications. 
                                 Let’s connect and make complexity work in our favor!
