--- a/index.html
+++ b/index.html
@@ -94,9 +94,7 @@
                         <h1 class="text-huge-title">
                             Lesedi Skosana, <br>
                             I am a Python Developer, <br>
-                            Database Administrator, <br> 
-                            Data Analyst <br>
-                            & Security Engineer <br>
+                            & CyberSecurity Researcher <br>
                             based in South Africa.
                         </h1>
                     </div>
@@ -136,7 +134,7 @@
                                 About
                             </h2>
                             <p class="attention-getter" data-animate-el>
-                                Hi, I’m Lesedi Skosana! I’m a Python Developer, Database Administrator, Data Analyst and Security Engineer based in South Africa. 
+                                Hi, I’m Lesedi Skosana! I’m a Software Developer and CyberSecurity Researcher based in South Africa. 
                                 I thrive on building complex systems, finding solutions where others see challenges. 
                                 My passion lies in transforming intricate data into clear, actionable insights and crafting efficient, data-driven applications. 
                                 Let’s connect and make complexity work in our favor!
@@ -696,7 +694,7 @@
                         <h3 class="text-pretitle">Reach me at</h3>
                         <p class="contact-links">
                             <a href="mailto:lesediskosana100@gmail.com" class="mailtoui">Click Here!</a> <br>
-                            <a href="tel:+27785857468">+27 78 585 7468</a>
+                            <a href="tel:+27788149120">+27 78 814 9120</a>
                         </p>
                     </div>
                    
@@ -705,12 +703,11 @@
                         <ul class="contact-social">
                             <li><a href="https://www.linkedin.com/in/lesedi-skosana-21173726b/">LinkedIn</a></li>
                             <li><a href="https://github.com/ark-lesedium">GitHub</a></li>
-                            <li><a href="https://x.com/Skosana_Lesedi">Twitter</a></li>
                             <li><a href="https://www.instagram.com/st_platoon_/">Instagram</a></li>
                         </ul>
                     </div>
                     <div class="column lg-4 md-12 contact-block">
-                        <a href="mailto:lesediskosana100@gmail.com" class="mailtoui btn btn--medium u-fullwidth contact-btn">Say Hello.</a>
+                        <a href="mailto:lesediking17@gmail.com" class="mailtoui btn btn--medium u-fullwidth contact-btn">Say Hello.</a>
                     </div>
                 </div> <!-- end contact-bottom -->
 
@@ -725,7 +722,7 @@
 
             <div class="row">
                 <div class="column ss-copyright">
-                    <span>© Copyright Lesedi Skosana 2024/2025</span> 
+                    <span>© Copyright Lesedi Skosana 2025</span> 
                 </div>
 
                 <div class="ss-go-top">
