Updated Portfolio Website
Update

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
                                 My passion lies in transforming intricate data into clear, actionable insights and crafting efficient, data-driven applications. 
                                 Let’s connect and make complexity work in our favor!
                             </p>
-                            <a href="CV.pdf" class="btn btn--medium u-fullwidth" data-animate-el>Download CV</a>
+                            <a href="Resume 2025.pdf" class="btn btn--medium u-fullwidth" data-animate-el>Download CV</a>
 
                         </div>
                     </div>
